--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <nav class="navbar">
 
             <div class="logo">
-                <a href="index.html"><img src="img/Monicool_logo.png" alt="Logo" id="logo"></a>               
+                <a href="index.html"><img src="img/Monicool_logo.png" alt="Logo"></a>               
             </div>
 
             <div class="menu">
